// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > matches snapshot when checked 1`] = `
<div>
  <button
    aria-checked="true"
    class="bg-orange-400 relative inline-flex h-7 w-11 min-w-11 items-center rounded-sm"
    data-checked=""
    data-headlessui-state="checked"
    id="headlessui-switch-«r1»"
    role="switch"
    tabindex="0"
    type="button"
  >
    <span
      class="translate-x-6 inline-block h-5 w-4 transform rounded-sm bg-white transition"
    />
  </button>
</div>
`;

exports[`Switch > matches snapshot when unchecked 1`] = `
<div>
  <button
    aria-checked="false"
    class="bg-slate-400 relative inline-flex h-7 w-11 min-w-11 items-center rounded-sm"
    data-headlessui-state=""
    id="headlessui-switch-«r0»"
    role="switch"
    tabindex="0"
    type="button"
  >
    <span
      class="translate-x-1 inline-block h-5 w-4 transform rounded-sm bg-white transition"
    />
  </button>
</div>
`;
